（杂项）升级主题版本

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -56,3 +56,13 @@ pre.vue-container
 
       &:hover 
         box-shadow 0 5px 10px rgba(0,0,0,0.12)
+
+@media (min-width: 1048px)
+  #valine-vuepress-comment
+    padding 25px
+    box-sizing border-box
+
+@media (max-width: 1048px)
+  #valine-vuepress-comment
+    .vlist
+      padding 15px
